src/css/stylesheet.css
/*******************************************************************************
Slate Theme for GitHub Pages
by Jason Costello, @jsncostello
*******************************************************************************/

@import url(normalize.css);


/*******************************************************************************
Theme Styles
*******************************************************************************/

*, *:before, *:after {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

body {
  color:#373737;
  background: #fff;
  font-size: 14px;
  font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}

h1, h2, h3 {
  margin: 10px 0;
  font-weight: 700;
  color:#222222;
  font-family: 'Lucida Grande', 'Calibri', Helvetica, Arial, sans-serif;
  letter-spacing: -1px;
}

h1 {
  font-size: 36px;
  font-weight: 700;
}
#main_content h1 {
  text-align: center;
}

h2 {
  padding-bottom: 10px;
  font-size: 32px;
  background: url('/images/bg_hr.png') repeat-x bottom;
}

h3 {
  font-size: 24px;
}

a {
  text-decoration: none;
  color: #007edf;
  text-shadow: none;
}

a:hover, a:focus {text-decoration: underline;}

table {
  border: 1px solid #373737;
  margin-bottom: 20px;
  text-align: left;
}

th {
  font-family: 'Lucida Grande', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  padding: 5px;
  background: #373737;
  color: #fff;
}

td {
  padding: 5px;
  border: 1px solid #373737;
}


/*******************************************************************************
Full-Width Styles
*******************************************************************************/

.outer {
  width: 100%;
}

.inner {
  position: relative;
  max-width: 1000px;
  padding: 20px 10px;
  margin: 0 auto;
}

.count {
  vertical-align: super;
  font-size: smaller;
  margin-left: 4px;
}

#banner {
  display: block;
  position: absolute;
  top:0;
  right: 10px;
  z-index: 10;
  padding: 10px;
  box-shadow: 0 0 10px rgba(0,0,0,.5);
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
  background-color: #0090ff;
  color: #fff;
  font-weight: 700;
  border-radius: 0px 0px 25px 25px;
}

#banner ul {
  list-style-type: none;
  margin: 0px auto;
  display: table;
  overflow: auto;
  padding: 0px 15px;
}

#banner ul li {
  float: left;
  margin-left: 16px;
}

#banner ul li:first-child {
  padding-top: 5px;
  margin-left: 0px;
}

#banner ul li img {
  display: block;
}

#header_wrap {
  background: #212121;
}

#header_wrap .inner {
  padding: 15px 10px 5px 10px;
}

#project_title {
  margin: 0;
  color: #fff;
  font-size: 42px;
  font-weight: 700;
  text-shadow: #111 0px 0px 10px;
}

#project_tagline {
  color: #fff;
  font-size: 24px;
  font-weight: 300;
  background: none;
  text-shadow: #111 0px 0px 10px;
}

#menu a {
  color: #0090ff;
  font-size: 18px;
  font-weight: 300;
  background: none;
  clear: none;
  margin: 0px 30px 0px 0px;
}

#menu a:hover {
  color: #fff;
}

#menu a.active span.bullet {
  color: #fff;
}

#main_content_wrap {
  background: #fff;
  border-top: 1px solid #111;
}

#main_content {
  padding-top: 20px;
}


/*******************************************************************************
Small Device Styles
*******************************************************************************/

@media screen and (max-width: 670px) {
  body {
    font-size:14px;
  }

  .inner {
    min-width: 480px;
    max-width: 670px;
  }

  #project_title {
  font-size: 32px;
  }

  h1 {
    font-size: 28px;
  }

  h2 {
    font-size: 24px;
  }

  h3 {
    font-size: 21px;
  }
}

